--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <!-- balance and transaction summery -->
         <section>
-            <div class="grid grid-cols-3 gap-6 w-3/4 mx-auto mt-6">
+            <div class="grid grid-cols-1  md:grid-cols-3 gap-6 w-3/4 mx-auto mt-6">
                 <div class="bg-violet-700 p-8 text-center rounded-lg text-white">
                    <h4 class="text-2xl"> Deposit</h4>
                    <h2 class="text-4xl font-semibold">$<span id="deposit-total">00</span></h2>
@@ -31,7 +31,7 @@
         </section>
         <!-- deposit and withdraw -->
         <section>
-            <div class="grid grid-cols-2 gap-6 w-3/4 mx-auto mt-6">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 w-3/4 mx-auto mt-6">
                 <div class="bg-pink-600 p-8 text-center rounded-lg text-white">
                     <h4 class="text-2xl mb-4"> Your deposit</h4>
                     <input id="deposit-field" class="w-3/4 p-3 rounded-md text-blue-600 font-bold" type="text" placeholder="Amount you want to deposit">
